--- a/serialization-deterministic/build.gradle
+++ b/serialization-deterministic/build.gradle
@@ -193,12 +193,20 @@ artifacts {
     publish file: deterministicJar, name: jarBaseName, type: 'jar', extension: 'jar', builtBy: metafix
 }
 
+tasks.named('sourceJar', Jar) {
+    from 'README.md'
+    include 'README.md'
+}
+
+tasks.named('javadocJar', Jar) {
+    from 'README.md'
+    include 'README.md'
+}
+
 publish {
     dependenciesFrom(configurations.deterministicArtifacts) {
         defaultScope = 'compile'
     }
-    publishSources = false
-    publishJavadoc = false
     name jarBaseName
 }
 
